--- a/Pokester-Bingo/Packages/manifest.json
+++ b/Pokester-Bingo/Packages/manifest.json
@@ -10,12 +10,13 @@
     "com.unity.multiplayer.playmode": "1.3.3",
     "com.unity.multiplayer.tools": "2.2.3",
     "com.unity.multiplayer.widgets": "1.0.1",
-    "com.unity.netcode.gameobjects": "2.2.0",
+    "com.unity.netcode.gameobjects": "2.3.1",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.services.multiplayer": "1.1.2",
     "com.unity.services.vivox": "16.6.0",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
+    "com.unity.transport": "2.5.1",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.6",
     "com.unity.modules.accessibility": "1.0.0",
